k8s/04_identity.yaml
---
# 1. Service: Expose identity-service ra ngoài qua LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: microservices-platform
spec:
  type: ClusterIP
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080

---
# 2. Deployment: Identity Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: microservices-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: identity-service:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          # Inject tất cả config và secret vào container
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
